<resources>
    <string name="app_name">Ease Of Living</string>
    <string name="add_gp_header">Gram Panchayat Data</string>
    <string name="location_parameters">Location Parameters</string>
    <string name="alloted_location">Location assigned</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="dev_block">Development Block</string>
    <string name="gram_panchayat">Gram Panchayat</string>
    <string name="village">Village</string>
    <string name="pincode">Pincode</string>
    <string name="base_data">Base Data - </string>
    <string name="min_of_sanitation_data">Ministry of Drinking Water and Sanitation Data - </string>
    <string name="lock_all_members">Please lock all save draft members first.</string>
    <string name="empty_value">Empty Value</string>
    <string name="household_particulars">Household Particulars</string>
    <string name="availability_of_lpg_gas_connection">Whether LPG gas connection is available in the Household?</string>
    <string name="cylinder_refill_frequency">If Yes, then number of times the cylider is refilled in last one year</string>
    <string name="availability_of_electricity_connection">Whether electricity connection is available in the household?</string>
    <string name="availability_of_led_bulbs_ujala">If Yes, whether the household has LED Bulbs under UJALA yojana (Unnat Jyoti by Affordable LEDs for All) ?</string>
    <string name="availability_of_pm_jandhan_account">Does any member of the household have PM Jan Dhan Account ?</string>
    <string name="whether_enrolled_for_pmjjy">Whether the household is enrolled under PM Jeevan Jyoti Bima Yojana ?</string>
    <string name="whether_enrolled_for_pmsby">Whether any member of the household is enrolled under PM Suraksha Bima Yojana ?</string>
    <string name="whether_immunized_under_mission_indradhanush">whether any member of the household has been immunised under Mission Indra-Dhanush ?</string>
    <string name="any_child_0_6_or_pregnant_woman_available">Is there any child (0-6 yrs.) or pregnant woman available in the household ?</string>
    <string name="any_member_shg_under_day_nrlm">Whether any member of the household is a member of the Self Help Group (SHG) under DAY - NRLM</string>
    <string name="whether_availed_nutrition_benefit_icds">If No, whether the household has ever availed the nutrition benefits under ICDS?</string>
    <string name="check_services_under_icds">If Yes, please check the services availed under ICDS</string>
    <string name="household_type">What is the type of House used by the household for living?</string>
    <string name="whether_any_member_registered_under_icds">If yes, whether any member of the household registered in ICDS ?</string>
    <string name="whether_beneficiary_of_pmayg">Whether the household is a beneficiary of the Pradhan Mantri Awaas Yojana - Gramin ?</string>
    <string name="provide_status_of_pmayg">If Yes, please provide the status</string>
    <string name="eb">Village Part</string>
    <string name="status_update_success">Data received successfully.</string>
    <string name="status_update_success_1">Household status updated.</string>
    <string name="get_data_no_data">Data already retreived.</string>
    <string name="get_data_no_village_status">No household status to update</string>
    <string name="home_option_village_status">Get households status</string>
    <string name="enu_db">Enumerated Block</string>
    <string name="part_a">Part A</string>
    <string name="part_b">Part B</string>
    <string name="basic_parameters">Basic Parameters</string>
    <string name="section_agriculture">Agriculture</string>
    <string name="section_land_improvement_minor_irr">Land Improvement and Minor Irrigation</string>
    <string name="section_animal_husbandry">Animal Husbandry</string>
    <string name="section_fisheries">Fisheries</string>
    <string name="section_rural_housing">Rural Housing</string>
    <string name="section_drinking_water">Drinking Water</string>
    <string name="section_roads">Roads</string>
    <string name="section_rural_electrification">Rural Electrification</string>
    <string name="section_non_conventional">Non Conventional Energy</string>
    <string name="section_maint_community_assets">Maintenance of Community Assets</string>
    <string name="section_fuel_fodder">Fuel and fodder</string>
    <string name="section_libraries">Libraries</string>
    <string name="section_cultural_activities">Cultural Activities</string>
    <string name="section_financial_communcation_infrastructure">Financial and communication infrastructure</string>
    <string name="section_pds">Public Distribution System</string>
    <string name="section_education">Education</string>
    <string name="section_vocational_education">Vocational Education</string>
    <string name="section_markets_fairs"><![CDATA[Markets & Fairs]]></string>
    <string name="section_health_sanitation"><![CDATA[Health & Sanitation]]></string>
    <string name="section_women_child_dev"><![CDATA[Women & Child Development]]></string>
    <string name="section_social_welfare">Social Welfare</string>
    <string name="section_family_welfare">Family Welfare</string>
    <string name="section_weaker_section">Welfare of Weaker Section</string>
    <string name="section_poverty_alleviation_programme">Poverty Alleviation Programme</string>
    <string name="section_khadi_village_cottage_ind"><![CDATA[Khadi, Village & Cottage Industries]]></string>
    <string name="section_social_forestry">Social Forestry</string>
    <string name="section_minor_forest_produce">Minor Forest Produce</string>
    <string name="section_small_scale_industries">Small Scale Industries</string>
    <string name="section_adult_non_formal_edu">Adult and non formal education</string>
    <string name="select_critical_illness">Select Critical Illness</string>
    <string name="select_bank_loan_amount">Select bank loan amount</string>
    <string name="select_wall_type">Select material of wall</string>
    <string name="select_roof_type">Select material of roof</string>
    <string name="enter_dwelling_room">Enter number of dwelling rooms</string>
    <string name="empty_unirrigated_land">Empty total unirrigated land</string>
    <string name="empty_assured_irrigation">Empty assured irrigation for two crops</string>
    <string name="empty_other_irrigated_land">Empty other irrigated land</string>
    <string name="select_computer_laptop_lightsource">Computer/Laptop can not be Yes if Main source of lighting is not Electricity or Solar.</string>
    <string name="select_computer_laptop">Select Computer/Laptop</string>
    <string name="select_air_conditioner_lightsource">Air Conditioner can not be Yes if Main source of lighting is not Electricity or Solar.</string>
    <string name="select_washing_machine_lightsource">Washing machine can not be Yes if Main source of lighting is not Electricity or Solar.</string>
    <string name="select_smartphone_lightsource">Smartphone can not be Yes if Main source of lighting is not Electricity or Solar.</string>
    <string name="select_ownership_type">Select ownership status</string>
    <string name="select_hhless_hhnum">Houseless  can not be selected if house no. is available.</string>
    <string name="select_sheltersless">Select Shelterless</string>
    <string name="select_post_office_acc_availability">Select post office account availability</string>
    <string name="select_outisde_road_street_light">Select outside road illuminated with street light</string>
    <string name="ration_card_no_empty">Ration card no is empty!</string>
    <string name="contact_no_empty">Empty Contact no!</string>
    <string name="select_telephone_type">Type of telephone can not be No Phone beacuse memeber already has contact number.</string>
    <string name="select_house_connect_road_street_light">Select house connected with road illuminated with street light</string>
    <string name="select_phc_centre">Select PHC/Sub centre accessebility</string>
    <string name="select_village">Select Village</string>
    <string name="msg_select_state">Please Select State</string>
    <string name="msg_select_district">Please Select District</string>
    <string name="spinner_heading_cooking_fuel">-- Select Fuel --</string>
    <string name="spinner_heading_drainage_facility">-- Select Drainage facility --</string>
    <string name="spinner_heading_household_liability_range">-- Select Liability range --</string>
    <string name="spinner_heading_household_income_source">-- Select Income source --</string>
    <string name="spinner_heading_household_type">-- Select House type --</string>
    <string name="spinner_heading_latrine_facility">-- Select Latrine facility --</string>
    <string name="spinner_heading_lighting_source">-- Select Light source --</string>
    <string name="spinner_heading_piped_drinking_water">-- Select Piped drinking water --</string>
    <string name="spinner_heading_ration_card_status">-- Select Ration Card --</string>
    <string name="spinner_heading_registered_motor">-- Select Registered Motor --</string>
    <string name="spinner_heading_telephone_type">-- Select Telephone type --</string>
    <string name="spinner_heading_hhd_uncovered_remark">-- Select Uncovered household remark --</string>
    <string name="health_nutrition">Health and Nutrition</string>
    <string name="social_security">Social Security</string>
    <string name="agriculture_livelihoods"><![CDATA[Agriculture & Livelihoods]]></string>
    <string name="good_governance">Good governance</string>
    <string name="water_management_efficiency">Water management and Efficiency</string>
    <string name="parliament_constituency">Parliament Constituency</string>
    <string name="assembly_constituency">Assembly Constituency</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="user_id">User Id</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="housenumber">House Number</string>
    <string name="streetname">Street Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="lastname">Last Name</string>
    <string name="area">Area</string>
    <string name="dob">Date of Birth</string>
    <string name="id_proof">Id Proof</string>
    <string name="id_number">Id Number</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="roles">Roles</string>
    <string name="approvedby">Approved By</string>
    <string name="ok_l">OK</string>
    <string name="db_l">Development Block</string>
    <string name="gp">Gram Panchayat</string>
    <string name="continues">Continue</string>
    <string name="contact_us">Contact Us</string>
    <string name="member_status">Member Status</string>
    <string name="saveasdraft">Save draft</string>
    <string name="died">Died</string>
    <string name="mo">Migrated</string>
    <string name="av">Available</string>
    <string name="not_verified">(not verified)</string>
    <string name="select_spp_mode">Select App Mode</string>
    <string name="training_mode">Training</string>
    <string name="actual_mode">Actual Data Collection</string>
    <string name="home">Home</string>
    <string name="change_language">Change Language</string>
    <string name="device_detail">Device Detail</string>
    <string name="about_app">About App</string>
    <string name="support_feedback">Support/Feedback</string>
    <string name="faq">FAQs</string>
    <string name="hindi_questionnaire">Hindi Questionnaire</string>
    <string name="logout">Logout</string>
</resources>