<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llPersonalDataDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center|left"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/my_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:id="@+id/llUploadPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon_camera"/>
            <TextView
                android:id="@+id/tvPhotoUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/upload_pic"
                android:textColor="@color/blue"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textColor="@color/blue"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/etUserId"
            style="@style/editText3"
            android:hint="@string/user_id"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="@color/blue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
             >
            <EditText
                android:id="@+id/etEmailId"
                style="@style/editText3"
                android:layout_width="wrap_content"
                android:text="@string/email_id"
                android:layout_weight="5"
                />

            <ImageView
                android:id="@+id/ivEmailVerified"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_non_verified"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tvEmailVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_verified"
                android:layout_weight="2"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textColor="@color/blue"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/etMobileNumber"
                style="@style/editText3"
                android:text="@string/mobile_number" />
            <ImageView
                android:id="@+id/ivMobileVerified"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_non_verified"
                />
            <TextView
                android:id="@+id/tvMobileVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_verified" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/blue"/>
        <EditText
            android:id="@+id/etName"
            style="@style/editText3"
            android:hint="@string/name"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/address"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etAddress"
            style="@style/editText3"
            android:background="@drawable/et_style"
            android:hint="@string/housenumber"/>

        <TextView
            android:id="@+id/tvStreetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/lastname"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etStreetName"
            android:visibility="gone"
            style="@style/editText3"
            android:background="@drawable/et_style"
            android:hint="@string/streetname"/>

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/area"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etArea"
            android:visibility="gone"
            style="@style/editText3"
            android:background="@drawable/et_style"
            android:hint="@string/area"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/blue"/>
        <EditText
            android:id="@+id/etGenderData"
            style="@style/editText3"
            android:hint="@string/gender"/>

        <TextView
            android:id="@+id/tvDob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="left|center"
            android:text="@string/dob"
            android:textColor="@color/blue"/>


            <EditText
                android:id="@+id/etDob"
                android:focusable="false"
                style="@style/editText3"
                android:hint="@string/dob"
                android:inputType="textEmailAddress"/>


        <TextView
            android:id="@+id/tvIdProof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:text="@string/id_proof"
            android:textColor="@color/blue"/>
        <EditText
            android:id="@+id/etIdProof"
            style="@style/editText3"
            android:inputType="number"
            android:hint="@string/id_number"/>

        <TextView
            android:id="@+id/tvIdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="@string/id_number"
            android:textColor="@color/blue"/>
        <EditText
            android:id="@+id/etIdNumber"
            android:visibility="gone"
            style="@style/editText3"
            android:background="@drawable/et_style"
            android:hint="@string/id_number"/>
        <TextView
            android:id="@+id/tvOrganisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organisation_name"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etOrganisation"
            style="@style/editText3"
            android:hint="@string/organisation_name"/>

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roles"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etRole"
            style="@style/editText3"
            android:hint="@string/roles"/>

        <TextView
            android:id="@+id/tvAllotedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alloted_location"
            android:textColor="@color/blue"
            android:visibility="gone"/>

        <LinearLayout
            style="@style/linearLayoutVertical3"
            android:id="@+id/llAllotedRoleLocation"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvStateRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/etStateRole"
                style="@style/editText3"
                android:hint="@string/state"/>

            <TextView
                android:id="@+id/tvDistrictRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/etDistrictRole"
                style="@style/editText3"
                android:hint="@string/district"/>

            <TextView
                android:id="@+id/tvDbRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/db_l"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/etDbRole"
                style="@style/editText3"
                android:hint="@string/db_l"/>

            <TextView
                android:id="@+id/tvGpRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gp"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/etGpRole"
                style="@style/editText3"
                android:hint="@string/gp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approvedby"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/etAssignedby"
            style="@style/editText3"
            android:hint="@string/approvedby"/>

        <Button
            android:id="@+id/btnOkMyProfile"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:text="@string/ok_l"/>
    </LinearLayout>

</ScrollView>